--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,18 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
+<ion-header >
+  <ion-toolbar color="primary">
+<ion-buttons slot="start">
+  <ion-button (click)="logout()">
+    <ion-icon slot="icon-only" name="log-out"></ion-icon>
+     
+  </ion-button>
+</ion-buttons> 
+
+<ion-title>
+    Home Page
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+ <p>Yeay ! you are logged </p>
 </ion-content>
