--- a/src/app/pages/firstpage/firstpage.page.html
+++ b/src/app/pages/firstpage/firstpage.page.html
@@ -5,16 +5,19 @@
 </ion-header> -->
 
 <ion-content>
+  <main>
 <ion-card>
 
 </ion-card>
     <ion-card-header class="ion-text-center">
         <ion-card-subtitle class="text-welcome">
-          Welcome to <span>devIN</span> the place where you can share your tidengs
+          Discover your freedom space in  <span>devIN</span> room
         </ion-card-subtitle>
+        <p>Explore the place where you can share freely your teedings with developers</p>
     </ion-card-header>    
     <div class="btns">
-<ion-button  aria-label="Primary input" color="primary"  type="submit" [routerLink]="['/login']" >Login</ion-button>
-<ion-button  aria-label="Light input" color="light"    type="submit" [routerLink]="['/sign-up']">sign-up</ion-button>
+<ion-button  class="btn1"  type="submit" [routerLink]="['/login']" >Login</ion-button>
+<ion-button  class="btn2"    type="submit" [routerLink]="['/sign-up']">sign-up</ion-button>
 </div>
+</main>
 </ion-content>
