--- a/src/app/pages/sign-up/sign-up.page.html
+++ b/src/app/pages/sign-up/sign-up.page.html
@@ -1,19 +1,58 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Sign-up</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-<form [formGroup]="credentials" (ngSubmit)="register()">
-  <ion-item fill="solid" class="ion-margin-bottom">
-    <ion-input placeholder="Enter your email address" type="email" formControlName="email" ></ion-input>
-    <ion-note slot="error" *ngIf="(email?.dirty || email?.touched) && email?.errors">Email is not correct!</ion-note>
-  </ion-item>
-  <ion-item fill="solid" class="ion-margin-bottom" >
-    <ion-input placeholder="Password" type="password" formControlName="password" ></ion-input>
-    <ion-note slot="error" *ngIf="(password?.dirty || password?.touched) && password?.errors">password not accepted!</ion-note>
-  </ion-item>
-  <ion-button expand="full" type="submit" >Register</ion-button>
-</form>
+  <ion-title class="title">
+    <b class="welcom-sign">Create an Account</b>
+    <p>and join the DevIN /> community!</p>
+  </ion-title>
+  <ion-card>
+    <div class="glassy">
+      <ion-card-header>
+        <b>Sign Up</b>
+      </ion-card-header>
+      <ion-card-content>
+      <form [formGroup]="credentials" (ngSubmit)="register()">
+        <ion-list no-lines class="ion-margin-bottom">
+        <ion-item fill="outline" class="ion-margin-bottom">
+          <ion-input
+            placeholder="name"
+            type="text"
+            formControlName="name"
+          ></ion-input>
+          <ion-note
+            slot="error"
+            *ngIf="(name?.dirty || name?.touched) && name?.errors"
+            >Name is not correct!</ion-note
+          >
+        </ion-item>
+        <ion-item fill="outline" class="ion-margin-bottom">
+          <ion-input
+            placeholder="Email"
+            type="email"
+            formControlName="email"
+          ></ion-input>
+          <ion-note
+            slot="error"
+            *ngIf="(email?.dirty || email?.touched) && email?.errors"
+            >Email is not correct!</ion-note
+          >
+        </ion-item>
+        <ion-item fill="outline" class="ion-margin-bottom">
+          <ion-input
+            placeholder="Password"
+            type="password"
+            formControlName="password"
+          ></ion-input>
+          <ion-note
+            slot="error"
+            *ngIf="(password?.dirty || password?.touched) && password?.errors"
+            >password not accepted!</ion-note
+          >
+        </ion-item>
+
+        <ion-button expand="full" type="submit" [disabled]="!credentials.valid">Register</ion-button>
+      </ion-list></form>
+      <br/>
+<a [routerLink]="['/sign-up']">Already have an account?</a>
+    </ion-card-content>
+    </div>
+  </ion-card>
 </ion-content>
