--- a/src/app/pages/login/login.page.css
+++ b/src/app/pages/login/login.page.css
@@ -31,12 +31,12 @@ ion-card-header {
 }
 
 .glassy {
-  background: rgba(255, 255, 255, 0.55);
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.18);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(7.2px);
-  -webkit-backdrop-filter: blur(7.2px);
-  border: 1px solid rgba(255, 255, 255, 0.35);
+  backdrop-filter: blur(4.1px);
+  -webkit-backdrop-filter: blur(4.1px);
 }
 
 .scroll-content {
