--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,7 @@
  * For more information on global stylesheets, visit the documentation:
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600&display=swap");
 /* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
 /* Basic CSS for apps built with Ionic */
@@ -24,6 +25,11 @@
 :root {
   --dgreen:#045460;
   --dblue:#040F1C;
-  --dblue:#049BB1;
-  --dblue:#50c878;
+  --lblue:#049BB1;
+  --lgreen:#50c878;
+  --gray:#434343;
+}
+
+* {
+  font-family: "Poppins", sans-serif;
 }/*# sourceMappingURL=global.css.map */
