--- a/src/app/pages/firstpage/firstpage.page.html
+++ b/src/app/pages/firstpage/firstpage.page.html
@@ -1,9 +1,5 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>devIN</ion-title>
-  </ion-toolbar>
-</ion-header> -->
 
+<!-- 
 <ion-content>
   <main>
 <ion-card>
@@ -20,4 +16,18 @@
 <ion-button  class="btn2"    type="submit" [routerLink]="['/sign-up']">sign-up</ion-button>
 </div>
 </main>
+</ion-content> -->
+<ion-content>
+  <div class="background">
+    <div class="overlay">
+      <div class="content">
+        <h1>DevIN</h1>
+        <p>Explore the place where you can share freely your teedings </p>
+      </div>
+      <div class="buttons">
+        <ion-button color="light" type="submit" [routerLink]="['/login']">Sign in</ion-button>
+        <ion-button color="tertiary" type="submit" [routerLink]="['/sign-up']" >Sign up</ion-button>
+      </div>
+    </div>
+  </div>
 </ion-content>
