--- a/src/app/pages/firstpage/firstpage.page.css
+++ b/src/app/pages/firstpage/firstpage.page.css
@@ -1,4 +1,4 @@
-ion-card {
+/* ion-card {
   background: url(../../../assets/images/imgfisrtpage1.jpg) 0 0/100% 100% no-repeat;
   height: 32%;
   border-radius: 14px;
@@ -46,9 +46,9 @@ main::before {
 .btns {
   margin: 10% 33%;
   display: flex;
-}
+} */
 
-ion-button {
+/* ion-button {
   --border-radius: 0 !important;
   margin: 0 !important;
 }
@@ -67,4 +67,4 @@ ion-card-header {
   --background: #e2e0e2 !important;
   color: black;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}/*# sourceMappingURL=firstpage.page.css.map */
+}# sourceMappingURL=firstpage.page.css.map */
