--- a/src/app/pages/firstpage/firstpage.page.scss
+++ b/src/app/pages/firstpage/firstpage.page.scss
@@ -1,68 +1,119 @@
-ion-card{
-    background: url(../../../assets/images/imgfisrtpage1.jpg) 0 0/100% 100% no-repeat;
-    height: 32%;
-    border-radius: 14px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  }
-  main::before {
-    background: linear-gradient(to right bottom,#f1f0f1,#fffefe,#ececec,#e2e1e2) 0 / cover fixed;
-  }
+// ion-card{
+//     background: url(../../../assets/images/imgfisrtpage1.jpg) 0 0/100% 100% no-repeat;
+//     height: 32%;
+//     border-radius: 14px;
+// box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+//   }
+//   main::before {
+//     background: linear-gradient(to right bottom,#f1f0f1,#fffefe,#ececec,#e2e1e2) 0 / cover fixed;
+//   }
   
-  main {
-    position: relative;
+//   main {
+//     position: relative;
    
     
-    background: hsla(0, 0%, 100%, .25) border-box;
-    overflow: hidden;
-    border-radius: .3em;
-    text-shadow: 0 1px 1px hsla(0, 0%, 100%, .3);
-    width: 100%;
-    height: 100%;
+//     background: hsla(0, 0%, 100%, .25) border-box;
+//     overflow: hidden;
+//     border-radius: .3em;
+//     text-shadow: 0 1px 1px hsla(0, 0%, 100%, .3);
+//     width: 100%;
+//     height: 100%;
 
-  }
+//   }
   
-  main::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    -webkit-filter: blur(60px);
-    filter: blur(20px);
-  }
+//   main::before {
+//     content: '';
+//     position: absolute;
+//     top: 0;
+//     right: 0;
+//     bottom: 0;
+//     left: 0;
+//     z-index: -1;
+//     -webkit-filter: blur(60px);
+//     filter: blur(20px);
+//   }
   
  
-  .text-welcome{
-    padding-top: 10%;
-    font-size: 17px;
-    color: rgb(39, 39, 39);
-    font-weight: 800;
-  }
-  .text-welcome>span {
-    font-size: 21px;
-    font-weight: bolder;
-    color:rgb(139, 58, 85);
-  }
-  .btns{
-margin :10% 33%  ;
-display: flex;
+//   .text-welcome{
+//     padding-top: 10%;
+//     font-size: 17px;
+//     color: rgb(39, 39, 39);
+//     font-weight: 800;
+//   }
+//   .text-welcome>span {
+//     font-size: 21px;
+//     font-weight: bolder;
+//     color:rgb(139, 58, 85);
+//   }
+//   .btns{
+// margin :10% 33%  ;
+// display: flex;
+// }
+// ion-button{
+// --border-radius: 0 !important;
+// margin: 0 !important;
+// }
+// ion-card-header{
+//   padding:0 10%;
+// }
+// .btn1{
+//   --background: #ffffff;
+//   color: black;
+//   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+// }
+// .btn2{
+//   --background: #e2e0e2 !important;
+//   color: black;
+//   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+// }
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../../../assets/images/bg9.jpg) no-repeat center center fixed;
+  background-size: cover;
 }
-ion-button{
---border-radius: 0 !important;
-margin: 0 !important;
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
 }
-ion-card-header{
-  padding:0 10%;
+
+.content {
+  position: absolute;
+  top: 20%;
+  left: 20%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
 }
-.btn1{
-  --background: #ffffff;
-  color: black;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+.content>h1{
+  font-weight: 800;
+  font-size: 35px;
 }
-.btn2{
-  --background: #e2e0e2 !important;
-  color: black;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+.content>p{
+  margin-left: 80px;
+  width: 100%;
+}
+.buttons {
+  position: absolute;
+  bottom: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15px;
+}
+
+ion-button {
+  margin: 0 10px;
+  width: 250px;
+  border-radius: 15px;
 }
