--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,7 +1,5 @@
 
-ion-content {
-    --background: url(../../../assets/images/background6.jpg) 0 0/100% 100% no-repeat;
-  }
+
   
   ion-card{
     background: transparent;
@@ -25,14 +23,39 @@ font-size: 21px;
 color: rgb(73, 72, 72);
 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
-.glassy{
-/* From https://css.glass */
-background: rgba(255, 255, 255, 0.18);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(4.1px);
--webkit-backdrop-filter: blur(4.1px);
-  }
+
   .scroll-content{
     text-align : center;
   }
+.bg-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../../../assets/images/bg12.jpg) no-repeat center center fixed;
+  background-size: cover;
+  z-index: -1;
+  //opacity: 0.7;
+}
+
+.glassy-div {
+  background: rgba(255, 255, 255, 0.18);
+ border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+   backdrop-filter: blur(4.1px);
+  -webkit-backdrop-filter: blur(4.1px);  padding: 20px;
+  border-radius: 10px;
+  margin: 0 auto;
+  width: 80%;
+  text-align: center;
+  margin-top: 40%;
+}
+
+// .title {
+//   font-size: 36px;
+//   margin-bottom: 20px;
+// }
+a{
+  color:#e4e4e6;
+}
