--- a/src/app/pages/sign-up/sign-up.page.html
+++ b/src/app/pages/sign-up/sign-up.page.html
@@ -3,7 +3,7 @@
     <h2 class="welcom-sign">Create an Account</h2>
     <p>and join the <span>&#60; DevIN /	&#62;</span> community!</p>
   </ion-title>
-  <ion-card class="glassy">
+  <ion-card class="glassy sign-card">
      
       <ion-card-content>
       <form [formGroup]="credentials" (ngSubmit)="register()">
