--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,11 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+/*================= swipper=============================*/
+@import "swiper/scss";
+@import "swiper/scss/navigation";
+@import "swiper/scss/pagination";
+
 :root{
     --dgreen:#045460;
     --dblue:#040F1C;
