--- a/src/app/pages/sign-up/sign-up.page.scss
+++ b/src/app/pages/sign-up/sign-up.page.scss
@@ -40,8 +40,8 @@ ion-content.signup {
     // width:90%;
     // margin-left: 20px;
     // margin-right: 20px;
-    margin: auto;
-    margin-top: 10%;
+    // margin: auto;
+    // margin-top: 20%;
 
     ion-card-content {
       form {
