--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,20 @@
 <ion-content class="home" >
      <div class="home-header">
-      <ion-searchbar value="Value"></ion-searchbar>
+      <ion-searchbar value="" color="light" class="search-bar"></ion-searchbar>
        <img class="profil" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1osY7x6Dr4JdxETV2aanhoJt0lt0yxe-6kg&usqp=CAU"/>
       </div>
       <div class="home-content">
         <!-- ========================================= trending articles ============================= -->
       <h3 class="ar-title">Trendings 🔥</h3>
       <div class="scroll-article">
-         <div *ngFor="let trend of trendy">
-          <div class="tr">
-            <img src="{{trend.img}}"/>
-            <h3>{{trend.title}}</h3>
-            <div class="tr-author">
-              <img src="{{trend.img}}"/>
-              <p>author</p>
-            </div>
-          </div>
-        </div>
+                <div class="tr"  *ngFor="let trend of trendy" style="background-image: url('{{trend.img}}');">
+                  <!-- <img src="{{trend.img}}"/> -->
+                  <a routerLink="../article-details">{{trend.title}}</a>
+                  <div class="tr-author">
+                    <img src="{{trend.img}}"/>
+                    <p>author</p>
+                  </div>
+                </div>
       </div>
       <!-- =========================================== articles categories =================================== -->
       <div class="categories">
@@ -33,7 +31,7 @@
           <div class="article">
             <img src="{{article.img}}"/>
             <div class="article-data">
-              <h4>{{article.title}}</h4>
+             <a routerLink="../article-details">{{article.title}}</a>
               <div class="article-author">
                 <img src="{{article.img}}">
                 <p>author</p>
