--- a/src/app/pages/articles/article-details/article-details.page.html
+++ b/src/app/pages/articles/article-details/article-details.page.html
@@ -23,7 +23,7 @@ Information systems (IS) scholars took notice of these transformations and the c
       </div>
       <div class="likes-comments">
         <div class="likes"><i class="fa-solid fa-heart" style="color: #ca0202;"></i><br>120</div>
-        <div class="comments"><i class="fa-solid fa-comment" style="color: #000000;"></i><br> 10</div>
+        <div class="comments" (click)="showComments()"><i class="fa-solid fa-comment" style="color: #000000;"></i><br> 10</div>
       </div>
     </div>
   </div>
