--- a/src/app/pages/articles/article-details/article-details.page.html
+++ b/src/app/pages/articles/article-details/article-details.page.html
@@ -3,7 +3,7 @@
     <div class="image-wrapper">
       <img class="glassy-effect" src="../../../assets/images/detail1.jpg" />
       <div class="back-save">
-        <div class="back-cercle"><i class="fa-solid fa-arrow-left"></i></div>
+        <div class="back-cercle" routerLink="../home"><i class="fa-solid fa-arrow-left"></i></div>
         <div class="save"><i class="fa-regular fa-bookmark"></i></div>
         
       </div>
