--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-content class="home" >
      <div class="home-header">
       <ion-searchbar value="" color="light" class="search-bar"></ion-searchbar>
-       <img class="profil" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1osY7x6Dr4JdxETV2aanhoJt0lt0yxe-6kg&usqp=CAU"/>
+       <img class="profil" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1osY7x6Dr4JdxETV2aanhoJt0lt0yxe-6kg&usqp=CAU" routerLink="../profile"/>
       </div>
       <div class="home-content">
         <!-- ========================================= trending articles ============================= -->
